navbar fix and spacing issues fixe

--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ p {
 
 @media screen and (max-width: 960px) {
 	.container {
-		width: 95%;
+		width: 90%;
 	}
 	.block-heading {
 		font-size: 26px;
@@ -664,7 +664,7 @@ h3 {
 	}
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 500px) {
 	.stats-heading {
 		font-size: 48px;
 	}
